--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,27 @@
     }
 }
 
+.title h2 {
+    text-align: center;
+    font-size: 49px;
+    font-weight: 700;
+    line-height: 130%;
+    color: #242424;
+    margin: 0 0 24px 0;
+
+    animation: fadeIn 2s forwards;
+}
+
+.title p {
+    text-align: center;
+    font-size: 22px;
+    line-height: 130%;
+    color: #555;
+    margin: 0 0 80px 0;
+
+    animation: fadeIn 2s forwards;
+}
+
 
 
 
@@ -105,4 +126,256 @@
     animation: fadeIn 1.8s forwards;
 }
 
-.main_visual .first_free {}
+.main_visual .free_btn {
+    display: block;
+    position: fixed;
+    bottom: -13px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+
+    max-width: 450px;
+    width: 90%;
+    background: #333;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, .16), 4px 8px 28px rgba(0, 0, 0, .08);
+    border-radius: 60px;
+    padding: 16px 0;
+    color: #fff;
+    text-align: center;
+
+    line-height: 24px;
+    font-size: 16px;
+
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.main_visual .free_btn strong {
+    font-weight: 900;
+}
+
+
+
+/* main_banner */
+.main_banner .main_slide .slide01 {
+    margin: -180px 0 0;
+    width: 100%;
+    height: 500px;
+
+    background: url(../images/book_slide_01.png) 0/3000px repeat-x;
+    animation: slideLeft 100s linear infinite;
+}
+
+.main_banner .main_slide .slide02 {
+    margin: -292px 0;
+    width: 100%;
+    height: 500px;
+
+    background: url(../images/book_slide_02.png) 0/3000px repeat-x;
+    animation: slideRight 100s linear infinite;
+}
+
+.main_banner .main_slide .slide03 {
+    margin: 0 0 -160px;
+    width: 100%;
+    height: 500px;
+
+    background: url(../images/book_slide_03.png)0/3000px repeat-x;
+    animation: slideLeft 100s linear infinite;
+}
+
+@keyframes slideLeft {
+    0% {
+        background-position: 0;
+    }
+
+    100% {
+        background-position: -3000px;
+    }
+}
+
+@keyframes slideRight {
+    0% {
+        background-position: -3000px;
+    }
+
+    100% {
+        background-position: 0;
+    }
+}
+
+
+
+/* main_event */
+.main_event {
+    background: #ffeb60;
+}
+
+.main_event .price_wrap {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+
+    max-width: 1080px;
+    margin: 0 auto;
+    padding: 0 15px;
+
+}
+
+.main_event .price_wrap .itm {
+    background: #fff;
+    height: 309px;
+    width: 327px;
+
+    box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.1);
+    border-radius: 16px;
+    padding: 32px;
+}
+
+.main_event .price_wrap strong {
+    display: block;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 28px;
+    color: #242424;
+
+    margin: 0 0 24px 0
+}
+
+.main_event .price_wrap .month {
+    margin: 0 0 16px 0;
+}
+
+.main_event .price_wrap .month,
+.main_event .price_wrap .year .dc_price {
+    display: flex;
+    align-items: baseline;
+}
+
+.main_event .price_wrap .month span,
+.main_event .price_wrap .year .dc_price span {
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 130%;
+    color: #242424;
+    margin-right: 6px;
+}
+
+.main_event .price_wrap .month p,
+.main_event .price_wrap .year .dc_price p {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 100%;
+    color: #242424;
+    margin-right: 2px;
+}
+
+.main_event .price_wrap .month b,
+.main_event .price_wrap .year .dc_price b {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 130%;
+    color: #242424;
+}
+
+.main_event .price_wrap .year .basic_price {
+    display: flex;
+    align-items: center;
+}
+
+.main_event .price_wrap .year .basic_price p {
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 22px;
+    color: #6f6f6f;
+    margin: 0 8px 0 24px;
+    text-decoration: line-through;
+}
+
+.main_event .price_wrap .year .basic_price img {
+    max-width: 57px;
+}
+
+.main_event .price_wrap .year {
+    margin: 0 0 24px 0;
+}
+
+.main_event .price_wrap .sub_info {
+    font-size: 14px;
+    line-height: 20px;
+    color: #6f6f6f;
+}
+
+.main_event .price_wrap .itm03 {
+    background: transparent;
+    box-shadow: none;
+
+    display: flex;
+    align-items: center;
+    padding: 0px 20px;
+}
+
+.main_event .price_wrap .itm03 .refund li {
+    display: flex;
+    align-items: center;
+}
+
+.main_event .price_wrap .itm03 .refund li:first-child {
+    border-bottom: 1px solid #fff;
+    padding-bottom: 16px;
+}
+
+.main_event .price_wrap .itm03 .refund li:last-child {
+    padding-top: 16px;
+}
+
+.main_event .price_wrap .itm03 .refund li img {
+    max-width: 72px;
+    margin-right: 22px;
+}
+
+.main_event .price_wrap .itm03 .refund li p {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    color: #242424;
+}
+
+
+/* main_content */
+.main_content .outer .buttons {
+    display: flex;
+    gap: 10px;
+    margin: 0 0 16px 0;
+}
+
+.main_content .outer .buttons button {
+    background: transparent;
+    border: 1px solid #242424;
+    border-radius: 100px;
+    padding: 6px 16px;
+
+    font-size: 14px;
+
+    display: block;
+    cursor: pointer;
+}
+
+.main_content .outer .buttons button.active {
+    background: #242424;
+    color: #fff;
+}
+
+.main_content .outer .tabs .book_shelf {
+    display: flex;
+
+}
+
+.main_content .tab {
+    display: none;
+}
+
+.main_content .tab.active {
+    display: block;
+}
