--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,3 @@
-@keyframes fadeIn {
-    0% {
-        transform: translate3d(0, 50%, 0);
-        opacity: 0;
-    }
-
-    100% {
-        transform: translateZ(0);
-        opacity: 1;
-    }
-}
-
 .title h2 {
     text-align: center;
     font-size: 49px;
@@ -17,8 +5,6 @@
     line-height: 130%;
     color: #242424;
     margin: 0 0 24px 0;
-
-    animation: fadeIn 2s forwards;
 }
 
 .title p {
@@ -27,14 +13,12 @@
     line-height: 130%;
     color: #555;
     margin: 0 0 80px 0;
-
-    animation: fadeIn 2s forwards;
 }
 
 
 
 
-/* header */
+/* header ===============================================*/
 .header {
     position: sticky;
     top: 0;
@@ -149,6 +133,8 @@
     border: none;
     outline: none;
     cursor: pointer;
+
+    z-index: 1000;
 }
 
 .main_visual .free_btn strong {
@@ -369,7 +355,26 @@
 
 .main_content .outer .tabs .book_shelf {
     display: flex;
+    align-items: baseline;
+}
 
+.main_content .outer .tabs .book_shelf>li {
+    max-width: 161px;
+    width: 20%;
+    min-width: 145px;
+
+    margin-right: 24px !important;
+}
+
+.main_content .outer .tabs .book_shelf>li a {
+    display: flex;
+    align-items: flex-end;
+
+    background: linear-gradient(90deg, var(--ui-05) 25%, var(--ui-05) 37%, var(--ui-05) 63%);
+    border-radius: 0 4px 4px 0;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, .1), 0 0 2px rgba(0, 0, 0, .2);
+
+    margin: 0 0 12px 0;
 }
 
 .main_content .tab {
@@ -378,4 +383,108 @@
 
 .main_content .tab.active {
     display: block;
+}
+
+.main_content .outer .tabs .book_shelf>li .txt strong {
+    display: block;
+    color: #242424;
+    font-weight: 700;
+    font-size: 15px;
+
+    margin: 0 0 5px 0;
+    word-wrap: break-word;
+    white-space: normal;
+}
+
+.main_content .outer .tabs .book_shelf>li .txt p,
+.main_content .outer .tabs .book_shelf>li .txt span {
+    font-size: 14px;
+}
+
+
+
+/* footer */
+.footer {
+    background: #f9f9f9;
+    padding: 20px 0 80px 0;
+}
+
+.footer .ft_head {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 0 10px 0;
+}
+
+.footer .ft_head h2 {
+    font-weight: 700;
+    font-size: 18px;
+    color: #242424;
+    padding: 8px 0px;
+}
+
+.footer .ft_head .sns {
+    display: flex;
+    gap: 5px;
+}
+
+.footer .ft_head .sns i {
+    font-size: 18px;
+    padding: 8px;
+    border: 1px solid #dfdfdf;
+    border-radius: 50%;
+}
+
+.footer .ft_index .author,
+.footer .ft_index .address,
+.footer .ft_index .email {
+    display: flex;
+}
+
+.footer .ft_index .author,
+.footer .ft_index .address {
+    margin: 0 0 5px 0;
+}
+
+.footer .ft_index .email {
+    margin: 0 0 20px 0;
+}
+
+.footer .ft_index li {
+    font-size: 14px;
+}
+
+.footer .ft_index li~li::before {
+    content: "";
+    display: inline-block;
+    width: 1px;
+    height: 10px;
+    background: #999;
+    margin: 0 10px;
+}
+
+.footer .ft_tail {
+    margin: 0 0 20px 0;
+}
+
+.footer .ft_tail .service {
+    display: flex;
+}
+
+.footer .ft_tail .service a {
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.footer .ft_tail li~li::before {
+    content: "";
+    display: inline-block;
+    width: 1px;
+    height: 10px;
+    background: #999;
+    margin: 0 10px;
+}
+
+.footer .copyright p {
+    font-size: 13px;
+    color: #6f6f6f;
 }
