--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,36 @@
     margin: 0 0 80px 0;
 }
 
+@media (max-width: 768px) {
+    * {
+        outline: 1px solid --tomato;
+    }
+
+    body {
+        overflow-x: visible;
+    }
+
+    .wrap {
+        min-width: 0;
+    }
+
+    .sec {
+        padding: 48px 24px;
+    }
+}
+
+@media (max-width: 768px) {
+    .title h2 {
+        font-size: 32px;
+        margin: 0 0 16px 0;
+    }
+
+    .title p {
+        font-size: 16px;
+        margin: 0 0 80px 0;
+    }
+}
+
 
 
 
@@ -41,10 +71,51 @@
     background-color: hsla(0, 0%, 100%, 0);
 }
 
+@media (max-width: 768px) {
+    .header .header_wrap {
+        padding: 0;
+    }
+}
+
+
+
 .header h1 {
     font-size: 0;
     max-width: 56px;
 }
+
+@media (max-width: 768px) {
+    .header h1 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        margin: 0;
+    }
+}
+
+
+
+@media (max-width: 768px) {
+
+    .gnb {
+        position: absolute;
+        top: -350px;
+        left: 0;
+        z-index: -1;
+        width: 100%;
+        padding: 80px 16px 24px;
+        background-color: #fff;
+
+        transition: 0.5s;
+    }
+
+    .gnb.on {
+        top: 0;
+        box-shadow: 10px 10px 40px rgba(0, 0, 0, .1);
+    }
+}
+
 
 .gnb>ul {
     display: flex;
@@ -52,9 +123,28 @@
     align-items: center;
 }
 
+@media (max-width: 768px) {
+    .gnb>ul {
+        flex-direction: column;
+        gap: 0;
+    }
+}
+
 .gnb>ul>li {
     font-weight: 500;
 }
+
+@media (max-width: 768px) {
+    .gnb>ul>li:not(:nth-child(4)) {
+        display: block;
+        width: 100%;
+        height: 56px;
+        line-height: 56px;
+        padding: 0;
+        text-align: center;
+    }
+}
+
 
 .gnb>ul>li button {
     margin: 0 0 0 50px;
@@ -70,6 +160,101 @@
     cursor: pointer;
 }
 
+@media (max-width: 768px) {
+    .gnb>ul>li button {
+        display: none;
+    }
+}
+
+
+.mobile_btn {
+    display: none;
+}
+
+
+@media (max-width: 768px) {
+    .mobile_btn {
+        display: block;
+
+        position: fixed;
+        top: 18px;
+        right: 10px;
+        z-index: 999;
+
+        width: 30px;
+        height: 30px;
+        background: #f9f9f9;
+        border: 1px solid #ddd;
+        border-radius: 3px;
+    }
+
+    .mobile_btn::before {
+        content: "";
+        position: absolute;
+        top: 7px;
+        left: 5px;
+        right: 5px;
+        height: 2px;
+        background: #333;
+    }
+
+    .mobile_btn::after {
+        content: "";
+        position: absolute;
+        bottom: 7px;
+        left: 5px;
+        right: 5px;
+        height: 2px;
+        background: #333;
+    }
+
+    .mobile_btn.on::before {
+        display: none;
+    }
+
+    .mobile_btn.on::after {
+        display: none;
+    }
+
+    .mobile_btn button {
+        border: none;
+        background: transparent;
+        outline: none;
+    }
+
+    .mobile_btn button::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 5px;
+        right: 5px;
+        height: 2px;
+        background: #333;
+        transform: translate(0, -50%);
+        transition: 0.5s;
+    }
+
+    .mobile_btn button::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 5px;
+        right: 5px;
+        height: 2px;
+        background: #333;
+        transform: translate(0, -50%);
+        transition: 0.5s;
+    }
+
+    .mobile_btn.on button::before {
+        transform: translate(0, -50%) rotate(45deg);
+    }
+
+    .mobile_btn.on button::after {
+        transform: translate(0, -50%) rotate(-225deg);
+    }
+}
+
 
 
 /* main_visual */
@@ -78,6 +263,13 @@
     padding: 64px 0 0;
     height: 820px;
 }
+
+@media (max-width: 768px) {
+    .main_visual {
+        height: 700px;
+    }
+}
+
 
 .main_visual .main_bg {
     position: relative;
@@ -89,6 +281,15 @@
     height: 100%;
     margin: 0 auto;
 }
+
+@media (max-width: 768px) {
+    .main_visual .main_bg {
+        background-position: 125% 85%;
+        background-size: 460px;
+        height: 545px;
+    }
+}
+
 
 .main_visual .main_bg .slogan {
     margin-top: 88px;
@@ -103,11 +304,25 @@
     animation: fadeIn 1.8s forwards;
 }
 
+@media (max-width: 768px) {
+    .main_visual .main_bg .slogan h1 {
+        height: 380px;
+        width: 230px;
+    }
+}
+
+
 .main_visual .main_bg .slogan h2 {
     height: 47px;
     width: 178px;
 
     animation: fadeIn 1.8s forwards;
+}
+
+@media (max-width: 768px) {
+    .main_visual .main_bg .slogan h2 {
+        display: none;
+    }
 }
 
 .main_visual .free_btn {
@@ -206,8 +421,15 @@
     max-width: 1080px;
     margin: 0 auto;
     padding: 0 15px;
-
 }
+
+@media (max-width: 768px) {
+    .main_event .price_wrap {
+
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
 
 .main_event .price_wrap .itm {
     background: #fff;
@@ -348,6 +570,14 @@
     cursor: pointer;
 }
 
+@media (max-width: 768px) {
+    .main_content .outer .buttons button {
+        font-size: 11px;
+        padding: 6px 12px;
+    }
+
+}
+
 .main_content .outer .buttons button.active {
     background: #242424;
     color: #fff;
@@ -440,6 +670,18 @@
     display: flex;
 }
 
+@media (max-width: 768px) {
+
+    .footer .ft_index .author,
+    .footer .ft_index .address,
+    .footer .ft_index .email {
+
+        flex-direction: column;
+    }
+}
+
+
+
 .footer .ft_index .author,
 .footer .ft_index .address {
     margin: 0 0 5px 0;
@@ -453,6 +695,13 @@
     font-size: 14px;
 }
 
+@media (max-width: 768px) {
+    .footer .ft_index li {
+        margin: 0 0 3px 0;
+    }
+}
+
+
 .footer .ft_index li~li::before {
     content: "";
     display: inline-block;
@@ -462,6 +711,13 @@
     margin: 0 10px;
 }
 
+@media (max-width: 768px) {
+    .footer .ft_index li~li::before {
+        display: none;
+    }
+}
+
+
 .footer .ft_tail {
     margin: 0 0 20px 0;
 }
@@ -470,10 +726,26 @@
     display: flex;
 }
 
+@media (max-width: 768px) {
+    .footer .ft_tail .service {
+        flex-direction: column;
+    }
+}
+
+
 .footer .ft_tail .service a {
     font-size: 14px;
     font-weight: 700;
+    color: #6f6f6f;
 }
+
+@media (max-width: 768px) {
+    .footer .ft_tail .service a {
+        display: block;
+        margin: 0 0 5px 0;
+    }
+}
+
 
 .footer .ft_tail li~li::before {
     content: "";
@@ -483,6 +755,14 @@
     background: #999;
     margin: 0 10px;
 }
+
+@media (max-width: 768px) {
+    .footer .ft_tail li~li::before {
+        display: none;
+    }
+}
+
+
 
 .footer .copyright p {
     font-size: 13px;
